# client-apps

./: .gitignore  readme.md
hackernews/: Cargo.toml
hackernews/assets/: tailwind.css
hackernews/src/: lib.rs  main.rs
hackernews/src/story/: api.rs  mod.rs
hackernews/src/ui/: mod.rs  stories.rs  story_comment.rs  story_item.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
